--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,9 @@
+== 0.1.0 / 2012-04-15
+
+* introduced the VirtualPoint class
+* nodes can now consist of arbitrary data
+* added methods to get all nodes and all virtual points on the hash ring
+
 == 0.0.1 / 2012-04-15
 
 * Birthday!
