--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,11 @@
+== 0.2.1 / 2013-04-27
+
+* fixed build, removed bones gem dependency
+
+== 0.2.0 / 2012-04-15
+
+* added AVLTree dependency
+
 == 0.1.0 / 2012-04-15
 
 * introduced the VirtualPoint class
