--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+== 2.0.0 / 2019-08-26
+
+* fixed probable performance issue with Ring.<< and Ring.delete which could occur using a large Ring
+
 == 0.2.1 / 2013-04-27
 
 * fixed build, removed bones gem dependency
